--- a/configs/ade20k/semantic-segmentation/Base-ADE20K-SemanticSegmentation.yaml
+++ b/configs/ade20k/semantic-segmentation/Base-ADE20K-SemanticSegmentation.yaml
@@ -32,7 +32,7 @@ SOLVER:
     CLIP_VALUE: 0.01
     NORM_TYPE: 2.0
   AMP:
-    ENABLED: True
+    ENABLED: False
 INPUT:
   MIN_SIZE_TRAIN: !!python/object/apply:eval ["[int(x * 0.1 * 512) for x in range(5, 21)]"]
   MIN_SIZE_TRAIN_SAMPLING: "choice"
